--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,18 +17,20 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick-theme.css"/>  -->
     <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/> -->
     <!-- <script src="/node_modules/chart.js/dist/Chart.min.css"></script> -->
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
     <script src="/node_modules/jquery/dist/jquery.js"></script>
     <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <link href="/src/blocks/airdatepicker/dist/css/datepicker.min.css" rel="stylesheet" type="text/css"> -->
+    <!-- <script src="/src/blocks/airdatepicker/dist/js/datepicker.min.js"></script> -->
     <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script> -->
     <!-- <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
     <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.3.7/slick.min.js"></script> -->
-  </head>
+  <!-- </head>
 
   <body>
     <script src="src/index.js"></script>
   </body>
 
-</html>
+</html> --> -->
